--- a/paper/final/report.bib
+++ b/paper/final/report.bib
@@ -1,5 +1,23 @@
 % Encoding: UTF-8
 
+@inproceedings{2017-Prabhu,
+  author = {Prabhu, Santhosh and Kheradmand, Ali and Godfrey, Brighten and Caesar, Matthew},
+  title = {Predicting Network Futures with Plankton},
+  booktitle = {Proceedings of the First Asia-Pacific Workshop on Networking},
+  series = {APNet'17},
+  year = {2017},
+  isbn = {978-1-4503-5244-4},
+  location = {Hong Kong, China},
+  pages = {92--98},
+  numpages = {7},
+  url = {http://doi.acm.org/10.1145/3106989.3106991},
+  doi = {10.1145/3106989.3106991},
+  acmid = {3106991},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {Correctness, Network Troubleshooting},
+}
+
 @misc{haproxy-they-use-it,
   title = {{HAProxy} - They use it!},
   howpublished = {\url{https://www.haproxy.org/they-use-it.html}},
