Finish implementation and fix typos and grammar errors

--- a/paper/final/report.bib
+++ b/paper/final/report.bib
@@ -1,5 +1,11 @@
 % Encoding: UTF-8
 
+@misc{nekton-repo,
+  title = {Nekton: Middlebox analysis for network verification},
+  howpublished = {\url{https://github.com/kyechou/nekton/}},
+  note = {Accessed: 2019-12-15}
+}
+
 @inproceedings{z3,
   author = {De Moura, Leonardo and Bj{\o}rner, Nikolaj},
   title = {Z3: An Efficient SMT Solver},
