Finish related work

--- a/paper/final/report.bib
+++ b/paper/final/report.bib
@@ -22,22 +22,16 @@
   address = {Berlin, Heidelberg},
 }
 
-@inproceedings{2017-Prabhu,
-  author = {Prabhu, Santhosh and Kheradmand, Ali and Godfrey, Brighten and Caesar, Matthew},
-  title = {Predicting Network Futures with Plankton},
-  booktitle = {Proceedings of the First Asia-Pacific Workshop on Networking},
-  series = {APNet'17},
-  year = {2017},
-  isbn = {978-1-4503-5244-4},
-  location = {Hong Kong, China},
-  pages = {92--98},
-  numpages = {7},
-  url = {http://doi.acm.org/10.1145/3106989.3106991},
-  doi = {10.1145/3106989.3106991},
-  acmid = {3106991},
-  publisher = {ACM},
-  address = {New York, NY, USA},
+@inproceedings{2020-PrabhuEtAl,
+  author = {Prabhu, Santhosh and Chou, Kuan-Yen and Kheradmand, Ali and Godfrey, Brighten and Caesar, Matthew},
+  title = {Plankton: Scalable network configuration verification through model checking},
+  booktitle = {17th {USENIX} Symposium on Networked Systems Design and
+      Implementation ({NSDI} 20},
+  year = {2020},
+  address = {Santa Clara, CA},
+  publisher = {{USENIX} Association},
   keywords = {Correctness, Network Troubleshooting},
+  month = feb,
 }
 
 @misc{haproxy-they-use-it,
