--- a/paper/final/section/conclusion.tex
+++ b/paper/final/section/conclusion.tex
@@ -2,10 +2,13 @@
 \section{Conclusion and Future Work}
 %-------------------------------------------------------------------------------
 
-% summary of the work
-
-% future directions
-
+% summary of the work and future plans
+We propose a new approach of model extraction from software network functions
+using binary analysis. The results show the possibility of getting an accurate
+model, in spite of some limitations in terms of scalability. In the future, we
+plan to explore more in this direction by learning more about binary analysis
+and source-code analysis, to be able to generate models with less human
+intervention.
 
 
 %-------------------------------------------------------------------------------
