Fix goal formulation

--- a/paper/final/section/design.tex
+++ b/paper/final/section/design.tex
@@ -2,10 +2,11 @@
 \section{Design and Methods}
 %-------------------------------------------------------------------------------
 
-In this project, our goal is to find a mapping $f$ between the inputs and
+In this project, our goal is to find the mapping $f$ between the inputs and
 outputs of a given middlebox, namely, $\forall$ input stream $s_i$, $\exists$
-an output stream $s_o$, such that $s_o = f(s_i)$. In this section, we describe
-how we design our approach of finding the output based on the provided input.
+a mapping $f$ and an output stream $s_o$, such that $s_o = f(s_i)$, which
+describes the middlebox behavior. Here we discuss how we design our approach of
+finding the output based on the provided input and vice versa.
 
 
 \subsection{Assumptions on middleboxes}
